<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_bottom_dialog"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="40dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_eng_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/change_lang"
            android:textColor="@color/black"
            android:fontFamily="@font/sans"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/tv_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:elevation="3dp"
            android:padding="13dp"
            android:fontFamily="@font/sans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/tv_hindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="13dp"
            android:elevation="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hindi"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/sans"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/tvArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button_lang"
            android:gravity="center"
            android:padding="13dp"
            android:elevation="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/arabic"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sans"
            android:textStyle="bold" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button_lang"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="13dp"
            android:elevation="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:fontFamily="@font/sans"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
