<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/appbar_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <RelativeLayout
                        android:id="@+id/rl_back_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_centerVertical="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/imBack_facebook"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:padding="5dp"
                            android:src="@drawable/ic_back" />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/facebook_app_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/imInfo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_about"
                        android:visibility="gone"
                        ads:tint="@color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appbar_facebook"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/RLEdittextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:padding="10dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <EditText
                            android:id="@+id/et_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/et_bg"
                            android:hint="@string/paste_link"
                            android:padding="15dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />


                    <LinearLayout
                        android:id="@+id/RLDownloadLayout"
                        android:layout_below="@+id/et_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/login_btn1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bg"
                            android:gravity="center"
                            android:padding="14dp"
                            android:text="@string/download"
                            android:elevation="8dp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/download_txt_size" />

                        <TextView
                            android:id="@+id/tv_paste"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bg"
                            android:gravity="center"
                            android:padding="14dp"
                            android:text="@string/paste"
                            android:elevation="8dp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/paste_txt_size" />

                    </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_facebook_id">
        </com.google.android.gms.ads.AdView>
<!--        <com.google.android.gms.ads.AdView-->
<!--            android:id="@+id/adView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/admob_banner_ad"/>-->


    </RelativeLayout>
</layout>